etc/ui.for_clang_parse.h


typedef unsigned int uiForEach;
 void uiQueueMain(void (*f)(void *data), void *data);
 void uiTimer(int milliseconds, int (*f)(void *data), void *data);
 void uiOnShouldQuit(int (*f)(void *data), void *data);
typedef struct uiWindow uiWindow;
 void uiWindowOnContentSizeChanged(uiWindow *w, void (*f)(uiWindow *, void *), void *data);
 void uiWindowOnClosing(uiWindow *w, int (*f)(uiWindow *w, void *data), void *data);
typedef struct uiButton uiButton;
 void uiButtonOnClicked(uiButton *b, void (*f)(uiButton *b, void *data), void *data);
typedef struct uiCheckbox uiCheckbox;
 void uiCheckboxOnToggled(uiCheckbox *c, void (*f)(uiCheckbox *c, void *data), void *data);
typedef struct uiEntry uiEntry;
 void uiEntryOnChanged(uiEntry *e, void (*f)(uiEntry *e, void *data), void *data);
typedef struct uiSpinbox uiSpinbox;
 void uiSpinboxOnChanged(uiSpinbox *s, void (*f)(uiSpinbox *s, void *data), void *data);
typedef struct uiSlider uiSlider;
 void uiSliderOnChanged(uiSlider *s, void (*f)(uiSlider *s, void *data), void *data);
typedef struct uiCombobox uiCombobox;
 void uiComboboxOnSelected(uiCombobox *c, void (*f)(uiCombobox *c, void *data), void *data);
typedef struct uiEditableCombobox uiEditableCombobox;
 void uiEditableComboboxOnChanged(uiEditableCombobox *c, void (*f)(uiEditableCombobox *c, void *data), void *data);
typedef struct uiRadioButtons uiRadioButtons;
 void uiRadioButtonsOnSelected(uiRadioButtons *r, void (*f)(uiRadioButtons *, void *), void *data);
typedef struct uiDateTimePicker uiDateTimePicker;
 void uiDateTimePickerOnChanged(uiDateTimePicker *d, void (*f)(uiDateTimePicker *, void *), void *data);
typedef struct uiMultilineEntry uiMultilineEntry;
 void uiMultilineEntryOnChanged(uiMultilineEntry *e, void (*f)(uiMultilineEntry *e, void *data), void *data);
typedef struct uiMenuItem uiMenuItem;
 void uiMenuItemOnClicked(uiMenuItem *m, void (*f)(uiMenuItem *sender, uiWindow *window, void *data), void *data);
typedef struct uiAttribute uiAttribute;
 uiAttribute *uiNewWeightAttribute(uiTextWeight weight);
 uiTextWeight uiAttributeWeight(const uiAttribute *a);
 uiAttribute *uiNewItalicAttribute(uiTextItalic italic);
 uiTextItalic uiAttributeItalic(const uiAttribute *a);
 uiAttribute *uiNewStretchAttribute(uiTextStretch stretch);
 uiTextStretch uiAttributeStretch(const uiAttribute *a);
 uiAttribute *uiNewColorAttribute(double r, double g, double b, double a);
 void uiAttributeColor(const uiAttribute *a, double *r, double *g, double *b, double *alpha);
 uiAttribute *uiNewBackgroundAttribute(double r, double g, double b, double a);
 uiAttribute *uiNewUnderlineAttribute(uiUnderline u);
 uiUnderline uiAttributeUnderline(const uiAttribute *a);
 uiAttribute *uiNewUnderlineColorAttribute(uiUnderlineColor u, double r, double g, double b, double a);
 void uiAttributeUnderlineColor(const uiAttribute *a, uiUnderlineColor *u, double *r, double *g, double *b, double *alpha);
typedef struct uiOpenTypeFeatures uiOpenTypeFeatures;
typedef uiForEach (*uiOpenTypeFeaturesForEachFunc)(const uiOpenTypeFeatures *otf, char a, char b, char c, char d, uint32_t value, void *data);
 uiOpenTypeFeatures *uiNewOpenTypeFeatures(void);
 void uiFreeOpenTypeFeatures(uiOpenTypeFeatures *otf);
 uiOpenTypeFeatures *uiOpenTypeFeaturesClone(const uiOpenTypeFeatures *otf);
 void uiOpenTypeFeaturesAdd(uiOpenTypeFeatures *otf, char a, char b, char c, char d, uint32_t value);
 void uiOpenTypeFeaturesRemove(uiOpenTypeFeatures *otf, char a, char b, char c, char d);
 int uiOpenTypeFeaturesGet(const uiOpenTypeFeatures *otf, char a, char b, char c, char d, uint32_t *value);
 void uiOpenTypeFeaturesForEach(const uiOpenTypeFeatures *otf, uiOpenTypeFeaturesForEachFunc f, void *data);
 uiAttribute *uiNewFeaturesAttribute(const uiOpenTypeFeatures *otf);
 const uiOpenTypeFeatures *uiAttributeFeatures(const uiAttribute *a);
typedef struct uiAttributedString uiAttributedString;
typedef uiForEach (*uiAttributedStringForEachAttributeFunc)(const uiAttributedString *s, const uiAttribute *a, size_t start, size_t end, void *data);
 uiAttributedString *uiNewAttributedString(const char *initialString);
 void uiFreeAttributedString(uiAttributedString *s);
 const char *uiAttributedStringString(const uiAttributedString *s);
 void uiAttributedStringForEachAttribute(const uiAttributedString *s, uiAttributedStringForEachAttributeFunc f, void *data);
typedef struct uiFontButton uiFontButton;
 void uiFontButtonOnChanged(uiFontButton *b, void (*f)(uiFontButton *, void *), void *data);
typedef struct uiColorButton uiColorButton;
 void uiColorButtonOnChanged(uiColorButton *b, void (*f)(uiColorButton *, void *), void *data);