libui.odin


// uiTextWeight represents possible text weights. These roughly
// map to the OS/2 text weight field of TrueType and OpenType
// fonts, or to CSS weight numbers. The named constants are
// nominal values; the actual values may vary by font and by OS,
// though this isn't particularly likely. Any value between
// uiTextWeightMinimum and uiTextWeightMaximum, inclusive,
// is allowed.
//
// Note that due to restrictions in early versions of Windows, some
// fonts have "special" weights be exposed in many programs as
// separate font families. This is perhaps most notable with
// Arial Black. libui does not do this, even on Windows (because the
// DirectWrite API libui uses on Windows does not do this); to
// specify Arial Black, use family Arial and weight uiTextWeightBlack.
uiTextWeight :: u32

uiTextWeightUltraLight :: 200
uiTextWeightLight      :: 300
uiTextWeightBook       :: 350
uiTextWeightNormal     :: 400
uiTextWeightMedium     :: 500
uiTextWeightMinimum    :: 0
uiTextWeightThin       :: 100
uiTextWeightSemiBold   :: 600
uiTextWeightUltraBold  :: 800
uiTextWeightUltraHeavy :: 950
uiTextWeightBold       :: 700
uiTextWeightHeavy      :: 900
uiTextWeightMaximum    :: 1000

@(default_calling_convention="c")
foreign lib {
	// uiNewWeightAttribute() creates a new uiAttribute that changes the
	// weight of the text it is applied to. It is an error to specify a weight
	// outside the range [uiTextWeightMinimum,
	// uiTextWeightMaximum].
	uiNewWeightAttribute :: proc(weight: uiTextWeight) -> ^uiAttribute ---

	// uiAttributeWeight() returns the font weight stored in a. It is an error
	// to call this on a uiAttribute that does not hold a font weight.
	uiAttributeWeight :: proc(a: ^uiAttribute) -> uiTextWeight ---
}

// uiTextItalic represents possible italic modes for a font. Italic
// represents "true" italics where the slanted glyphs have custom
// shapes, whereas oblique represents italics that are merely slanted
// versions of the normal glyphs. Most fonts usually have one or the
// other.
uiTextItalic :: u32

uiTextItalicNormal  :: 0
uiTextItalicOblique :: 1
uiTextItalicItalic  :: 2

@(default_calling_convention="c")
foreign lib {
	// uiNewItalicAttribute() creates a new uiAttribute that changes the
	// italic mode of the text it is applied to. It is an error to specify an
	// italic mode not specified in uiTextItalic.
	uiNewItalicAttribute :: proc(italic: uiTextItalic) -> ^uiAttribute ---

	// uiAttributeItalic() returns the font italic mode stored in a. It is an
	// error to call this on a uiAttribute that does not hold a font italic
	// mode.
	uiAttributeItalic :: proc(a: ^uiAttribute) -> uiTextItalic ---
}

uiTextStretchExtraCondensed :: 1
uiTextStretchCondensed      :: 2
uiTextStretchSemiCondensed  :: 3

// uiTextStretch represents possible stretches (also called "widths")
// of a font.
//
// Note that due to restrictions in early versions of Windows, some
// fonts have "special" stretches be exposed in many programs as
// separate font families. This is perhaps most notable with
// Arial Condensed. libui does not do this, even on Windows (because
// the DirectWrite API libui uses on Windows does not do this); to
// specify Arial Condensed, use family Arial and stretch
// uiTextStretchCondensed.
uiTextStretch :: u32

uiTextStretchUltraCondensed :: 0
uiTextStretchExpanded       :: 6
uiTextStretchSemiExpanded   :: 5
uiTextStretchUltraExpanded  :: 8
uiTextStretchExtraExpanded  :: 7
uiTextStretchNormal         :: 4

@(default_calling_convention="c")
foreign lib {
	// uiNewStretchAttribute() creates a new uiAttribute that changes the
	// stretch of the text it is applied to. It is an error to specify a strech
	// not specified in uiTextStretch.
	uiNewStretchAttribute :: proc(stretch: uiTextStretch) -> ^uiAttribute ---

	// uiAttributeStretch() returns the font stretch stored in a. It is an
	// error to call this on a uiAttribute that does not hold a font stretch.
	uiAttributeStretch :: proc(a: ^uiAttribute) -> uiTextStretch ---

	// uiNewColorAttribute() creates a new uiAttribute that changes the
	// color of the text it is applied to. It is an error to specify an invalid
	// color.
	uiNewColorAttribute :: proc(r: f64, g: f64, b: f64, a: f64) -> ^uiAttribute ---

	// uiAttributeColor() returns the text color stored in a. It is an
	// error to call this on a uiAttribute that does not hold a text color.
	uiAttributeColor :: proc(a: ^uiAttribute, r: ^f64, g: ^f64, b: ^f64, alpha: ^f64) ---

	// uiNewBackgroundAttribute() creates a new uiAttribute that
	// changes the background color of the text it is applied to. It is an
	// error to specify an invalid color.
	uiNewBackgroundAttribute :: proc(r: f64, g: f64, b: f64, a: f64) -> ^uiAttribute ---
}

uiUnderlineNone :: 0

// uiUnderline specifies a type of underline to use on text.
uiUnderline :: u32

uiUnderlineSuggestion :: 3
uiUnderlineDouble     :: 2
uiUnderlineSingle     :: 1

@(default_calling_convention="c")
foreign lib {
	// uiNewUnderlineAttribute() creates a new uiAttribute that changes
	// the type of underline on the text it is applied to. It is an error to
	// specify an underline type not specified in uiUnderline.
	uiNewUnderlineAttribute :: proc(u: uiUnderline) -> ^uiAttribute ---

	// uiAttributeUnderline() returns the underline type stored in a. It is
	// an error to call this on a uiAttribute that does not hold an underline
	// style.
	uiAttributeUnderline :: proc(a: ^uiAttribute) -> uiUnderline ---
}

uiUnderlineColorCustom  :: 0
uiUnderlineColorGrammar :: 2

// uiUnderlineColor specifies the color of any underline on the text it
// is applied to, regardless of the type of underline. In addition to
// being able to specify a custom color, you can explicitly specify
// platform-specific colors for suggestion underlines; to use them
// correctly, pair them with uiUnderlineSuggestion (though they can
// be used on other types of underline as well).
//
// If an underline type is applied but no underline color is
// specified, the text color is used instead. If an underline color
// is specified without an underline type, the underline color
// attribute is ignored, but not removed from the uiAttributedString.
uiUnderlineColor :: u32

uiUnderlineColorSpelling  :: 1
uiUnderlineColorAuxiliary :: 3

@(default_calling_convention="c")
foreign lib {
	// uiNewUnderlineColorAttribute() creates a new uiAttribute that
	// changes the color of the underline on the text it is applied to.
	// It is an error to specify an underline color not specified in
	// uiUnderlineColor.
	//
	// If the specified color type is uiUnderlineColorCustom, it is an
	// error to specify an invalid color value. Otherwise, the color values
	// are ignored and should be specified as zero.
	uiNewUnderlineColorAttribute :: proc(u: uiUnderlineColor, r: f64, g: f64, b: f64, a: f64) -> ^uiAttribute ---

	// uiAttributeUnderlineColor() returns the underline color stored in
	// a. It is an error to call this on a uiAttribute that does not hold an
	// underline color.
	uiAttributeUnderlineColor :: proc(a: ^uiAttribute, u: ^uiUnderlineColor, r: ^f64, g: ^f64, b: ^f64, alpha: ^f64) ---
}

uiOpenTypeFeatures :: struct {}

// uiOpenTypeFeaturesForEachFunc is the type of the function
// invoked by uiOpenTypeFeaturesForEach() for every OpenType
// feature in otf. Refer to that function's documentation for more
// details.
uiOpenTypeFeaturesForEachFunc :: proc "c" (otf: ^uiOpenTypeFeatures, a: i8, b: i8, _c: i8, d: i8, value: u32, data: rawptr) -> uiForEach

@(default_calling_convention="c")
foreign lib {
	// @role uiOpenTypeFeatures constructor
	// uiNewOpenTypeFeatures() returns a new uiOpenTypeFeatures
	// instance, with no tags yet added.
	uiNewOpenTypeFeatures :: proc() -> ^uiOpenTypeFeatures ---

	// @role uiOpenTypeFeatures destructor
	// uiFreeOpenTypeFeatures() frees otf.
	uiFreeOpenTypeFeatures :: proc(otf: ^uiOpenTypeFeatures) ---

	// uiOpenTypeFeaturesClone() makes a copy of otf and returns it.
	// Changing one will not affect the other.
	uiOpenTypeFeaturesClone :: proc(otf: ^uiOpenTypeFeatures) -> ^uiOpenTypeFeatures ---

	// uiOpenTypeFeaturesAdd() adds the given feature tag and value
	// to otf. The feature tag is specified by a, b, c, and d. If there is
	// already a value associated with the specified tag in otf, the old
	// value is removed.
	uiOpenTypeFeaturesAdd :: proc(otf: ^uiOpenTypeFeatures, a: i8, b: i8, _c: i8, d: i8, value: u32) ---

	// uiOpenTypeFeaturesRemove() removes the given feature tag
	// and value from otf. If the tag is not present in otf,
	// uiOpenTypeFeaturesRemove() does nothing.
	uiOpenTypeFeaturesRemove :: proc(otf: ^uiOpenTypeFeatures, a: i8, b: i8, _c: i8, d: i8) ---

	// uiOpenTypeFeaturesGet() determines whether the given feature
	// tag is present in otf. If it is, *value is set to the tag's value and
	// nonzero is returned. Otherwise, zero is returned.
	//
	// Note that if uiOpenTypeFeaturesGet() returns zero, value isn't
	// changed. This is important: if a feature is not present in a
	// uiOpenTypeFeatures, the feature is NOT treated as if its
	// value was zero anyway. Script-specific font shaping rules and
	// font-specific feature settings may use a different default value
	// for a feature. You should likewise not treat a missing feature as
	// having a value of zero either. Instead, a missing feature should
	// be treated as having some unspecified default value.
	uiOpenTypeFeaturesGet :: proc(otf: ^uiOpenTypeFeatures, a: i8, b: i8, _c: i8, d: i8, value: ^u32) -> i32 ---

	// uiOpenTypeFeaturesForEach() executes f for every tag-value
	// pair in otf. The enumeration order is unspecified. You cannot
	// modify otf while uiOpenTypeFeaturesForEach() is running.
	uiOpenTypeFeaturesForEach :: proc(otf: ^uiOpenTypeFeatures, f: uiOpenTypeFeaturesForEachFunc, data: rawptr) ---

	// uiNewFeaturesAttribute() creates a new uiAttribute that changes
	// the font family of the text it is applied to. otf is copied; you may
	// free it after uiNewFeaturesAttribute() returns.
	uiNewFeaturesAttribute :: proc(otf: ^uiOpenTypeFeatures) -> ^uiAttribute ---

	// uiAttributeFeatures() returns the OpenType features stored in a.
	// The returned uiOpenTypeFeatures object is owned by a. It is an
	// error to call this on a uiAttribute that does not hold OpenType
	// features.
	uiAttributeFeatures :: proc(a: ^uiAttribute) -> ^uiOpenTypeFeatures ---
}

uiAttributedString :: struct {}

// uiAttributedStringForEachAttributeFunc is the type of the function
// invoked by uiAttributedStringForEachAttribute() for every
// attribute in s. Refer to that function's documentation for more
// details.
uiAttributedStringForEachAttributeFunc :: proc "c" (s: ^uiAttributedString, a: ^uiAttribute, start: c.size_t, end: c.size_t, data: rawptr) -> uiForEach

@(default_calling_convention="c")
foreign lib {
	// @role uiAttributedString constructor
	// uiNewAttributedString() creates a new uiAttributedString from
	// initialString. The string will be entirely unattributed.
	uiNewAttributedString :: proc(initialString: cstring) -> ^uiAttributedString ---

	// @role uiAttributedString destructor
	// uiFreeAttributedString() destroys the uiAttributedString s.
	// It will also free all uiAttributes within.
	uiFreeAttributedString :: proc(s: ^uiAttributedString) ---

	// uiAttributedStringString() returns the textual content of s as a
	// '\0'-terminated UTF-8 string. The returned pointer is valid until
	// the next change to the textual content of s.
	uiAttributedStringString :: proc(s: ^uiAttributedString) -> cstring ---
